2012-08-01  Kai Tietz  <ktietz@redhat.com>

	* secapi/_vcprintf_s.c: New file.
	* secapi/_vcprintf_s_l.c: New file.
	* secapi/_cprintf_s_l.c: New file.
	* Makefile.am: Add new file.
	* Makefile.in: Regenerated.
	* lib32/msvcrt.def: Commented symbol.
	* lib64/msvcrt.def: Likewise.

2012-07-31  Kai Tietz  <ktietz@redhat.com>

	* secapi/: New folder.
	* Makefile.am: Add _cgets_s.c _cgetwe_s.c and _cprintf_s.c files
	to libmingwex.a library.
	* Makefile.in: Regnerated.
	* lib32/msvcrt.def: Comment replaced secured-API functions.
	* lib64/msvcrt.def: Likewise.

2012-07-17  Kai Tietz  <ktietz@redhat.com>

	PR 3544372
	* misc/mingw_pformat.h (PFORMAT_TO_FILE): Increased constant.
	(PFORMAT_NOLIMIT): Likewise.

2012-07-11  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/tapi32.def: Add missing exports.

2012-07-10  Ozkan Sezer  <sezeroz@gmail.com>

	* crt/tlsmthread.c: Removed leftovers of Win9X/Me mingwm10.dll
	support.

2012-07-06  Ozkan Sezer  <sezeroz@gmail.com>

	* crt/tlssup.c: Removed Windows 9X/Me mingwm10.dll support.

2012-06-19  Kai Tietz  <ktietz@redhat.com>

	* math/fdim.c: Adjust for being posix compatible.
	* math/fdimf.c: Likewise.
	* math/fdiml.c: Likewise.
	* math/ilogb.S: Replace x64 variant by soft-float variant.
	* math/ilogbf.S: Likewise.
	* math/logb.c: Likewise.
	* math/logbf.c: Likewise.
	* math/isnan.c: Special-case for x64.
	* math/isnanf.c: Likewise.
	* math/signbit.c: Likewise.
	* math/signbitf.c: Likewise.

	* math/fpclassify.c: Special-case x64.
	* math/fpclassifyf.c: Likewise.

2012-06-06  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/winhttp.def (WinHttpCheckPlatform): Add missing @0
	__stdcall suffix.

2012-06-05  Kai Tietz  <ktietz@redhat.com>

	* lib32/winhttp.def: New file.
	* lib64/winhttp.def: New file.

2012-05-26  Kai Tietz  <ktietz@redhat.com>

	* math/floor*: Optimize for 64-bit without using fpu.
	* Makefile.am: Adjust floor and floorf sources.
	* Makefile.in: Regenerated.
	* lib32/ and lib64/: Adjust msvcr*.def files for providing