@@ -1,4 +1,4 @@
-; 
+;ecapi/_vcprintf_s.c secapi/_vcprintf_s_l.c/&/
 ; Exports of file msvcrt.dll
 ;
 ; Autogenerated by gen_exportdef
@@ -250,8 +250,8 @@ _cwprintf
 _cwprintf_l
 _cwprintf_p
 _cwprintf_p_l
-_cwprintf_s
-_cwprintf_s_l
+; _cwprintf_s Replaced by emu
+; _cwprintf_s_l Likewise.
 _cwscanf
 _cwscanf_l
 _cwscanf_s
@@ -819,8 +819,8 @@ _vcwprintf
 _vcwprintf_l
 _vcwprintf_p
 _vcwprintf_p_l
-_vcwprintf_s
-_vcwprintf_s_l
+; _vcwprintf_s Replaced by emu
+; _vcwprintf_s_l Likewise.
 _vfprintf_l
 _vfprintf_p
 _vfprintf_p_l
